src/tests/errors/staticanalysis/typing/typeerrors/procedure3_fail.cmp
program procedure3_fail
begin

	proc Add( val1 : int , val2 : int ) : int
	begin
	    return; /* error, no return value */
	end;
	proc main()
	begin
	    printint( Add( 40, 2 ) );
	end
end